fixed jumping graphes on reload

--- a/tasks/assets/sass/components/_graphs.scss
+++ b/tasks/assets/sass/components/_graphs.scss
@@ -197,7 +197,7 @@
   width  : 100%;
   height : 0;
 
-  padding-top : 60%;
+  padding-top : calc( 40% + 80px );
 }
 
 .p--graphs--svg__initialized {
